<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sentSID"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/sentSID"
            android:textAlignment="center"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.425" />

        <TextView
            android:id="@+id/sentMessage"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="76dp"
            android:text="@string/sentMessage"
            android:textAlignment="center"
            android:textSize="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sentSID"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/secondactmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondactmessage"
            android:textSize="40dp"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.287" />

        <Button
            android:id="@+id/returnbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.832"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.893" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>